--- a/.gitignore
+++ b/.gitignore
@@ -26,16 +26,39 @@ ipch/
 *.sdf
 *.opensdf
 *.user
+*.VC.db
+*.VC.opendb
 obj/
 [Rr]elease*/
 _ReSharper*/
 [Tt]est[Rr]esult*
 Build/
-bin/
+bin32/
+bin64/
+include/
+lib32/
+lib64/
 
+src/icu/lib/
 src/icu/source/data/out/icudt46l.dat
+src/icu/source/data/out/tmp/
 src/icu/source/data/out/tmp/icudata.lst
 src/icu/source/data/out/tmp/icudata.res
 src/icu/source/test/testdata/out/testdata.dat
 src/icu/source/test/testdata/out/testdata/nam.typ
 src/opencflite/objc4/version.h
+src/openssl/MINFO
+src/openssl/Makefile
+src/openssl/NUL
+src/openssl/crypto/buildinf.h
+src/openssl/crypto/opensslconf.h
+src/openssl/inc32/openssl/opensslconf.h
+src/openssl/ms/bcb.mak
+src/openssl/ms/libeay32.def
+src/openssl/ms/nt.mak
+src/openssl/ms/ntdll.mak
+src/openssl/ms/ssleay32.def
+src/openssl/ms/version32.rc
+src/openssl/out32dll/
+src/openssl/tmp32dll
+src/pthreads/pthreadVC2.map
