--- a/src/cairo/cairo/src/cairo.vcxproj
+++ b/src/cairo/cairo/src/cairo.vcxproj
@@ -104,16 +104,16 @@
     </Link>
     <PostBuildEvent>
       <Command>mkdir "$(SolutionDir)include\cairo"
-xcopy /Y /R "$(ProjectDir)..\cairo-version.h" "$(SolutionDir)include\cairo"
-xcopy /Y /R "$(ProjectDir)cairo.h" "$(SolutionDir)include\cairo"
-xcopy /Y /R "$(ProjectDir)cairo-deprecated.h" "$(SolutionDir)include\cairo"
-xcopy /Y /R "$(ProjectDir)cairo-features.h" "$(SolutionDir)include\cairo"
-xcopy /Y /R "$(ProjectDir)cairo-gl.h" "$(SolutionDir)include\cairo"
-xcopy /Y /R "$(ProjectDir)cairo-pdf.h" "$(SolutionDir)include\cairo"
-xcopy /Y /R "$(ProjectDir)cairo-ps.h" "$(SolutionDir)include\cairo"
-xcopy /Y /R "$(ProjectDir)cairo-svg.h" "$(SolutionDir)include\cairo"
-xcopy /Y /R "$(ProjectDir)cairo-win32.h" "$(SolutionDir)include\cairo"
-xcopy /Y /R "$(ProjectDir)cairo-xml.h" "$(SolutionDir)include\cairo"
+xcopy /Y /D /R "$(ProjectDir)..\cairo-version.h" "$(SolutionDir)include\cairo"
+xcopy /Y /D /R "$(ProjectDir)cairo.h" "$(SolutionDir)include\cairo"
+xcopy /Y /D /R "$(ProjectDir)cairo-deprecated.h" "$(SolutionDir)include\cairo"
+xcopy /Y /D /R "$(ProjectDir)cairo-features.h" "$(SolutionDir)include\cairo"
+xcopy /Y /D /R "$(ProjectDir)cairo-gl.h" "$(SolutionDir)include\cairo"
+xcopy /Y /D /R "$(ProjectDir)cairo-pdf.h" "$(SolutionDir)include\cairo"
+xcopy /Y /D /R "$(ProjectDir)cairo-ps.h" "$(SolutionDir)include\cairo"
+xcopy /Y /D /R "$(ProjectDir)cairo-svg.h" "$(SolutionDir)include\cairo"
+xcopy /Y /D /R "$(ProjectDir)cairo-win32.h" "$(SolutionDir)include\cairo"
+xcopy /Y /D /R "$(ProjectDir)cairo-xml.h" "$(SolutionDir)include\cairo"
 </Command>
       <Message>Install Headers</Message>
     </PostBuildEvent>
@@ -131,16 +131,16 @@ xcopy /Y /R "$(ProjectDir)cairo-xml.h" "$(SolutionDir)include\cairo"
     </Link>
     <PostBuildEvent>
       <Command>mkdir "$(SolutionDir)include\cairo"
-xcopy /Y /R "$(ProjectDir)..\cairo-version.h" "$(SolutionDir)include\cairo"
-xcopy /Y /R "$(ProjectDir)cairo.h" "$(SolutionDir)include\cairo"
-xcopy /Y /R "$(ProjectDir)cairo-deprecated.h" "$(SolutionDir)include\cairo"
-xcopy /Y /R "$(ProjectDir)cairo-features.h" "$(SolutionDir)include\cairo"
-xcopy /Y /R "$(ProjectDir)cairo-gl.h" "$(SolutionDir)include\cairo"
-xcopy /Y /R "$(ProjectDir)cairo-pdf.h" "$(SolutionDir)include\cairo"
-xcopy /Y /R "$(ProjectDir)cairo-ps.h" "$(SolutionDir)include\cairo"
-xcopy /Y /R "$(ProjectDir)cairo-svg.h" "$(SolutionDir)include\cairo"
-xcopy /Y /R "$(ProjectDir)cairo-win32.h" "$(SolutionDir)include\cairo"
-xcopy /Y /R "$(ProjectDir)cairo-xml.h" "$(SolutionDir)include\cairo"
+xcopy /Y /D /R "$(ProjectDir)..\cairo-version.h" "$(SolutionDir)include\cairo"
+xcopy /Y /D /R "$(ProjectDir)cairo.h" "$(SolutionDir)include\cairo"
+xcopy /Y /D /R "$(ProjectDir)cairo-deprecated.h" "$(SolutionDir)include\cairo"
+xcopy /Y /D /R "$(ProjectDir)cairo-features.h" "$(SolutionDir)include\cairo"
+xcopy /Y /D /R "$(ProjectDir)cairo-gl.h" "$(SolutionDir)include\cairo"
+xcopy /Y /D /R "$(ProjectDir)cairo-pdf.h" "$(SolutionDir)include\cairo"
+xcopy /Y /D /R "$(ProjectDir)cairo-ps.h" "$(SolutionDir)include\cairo"
+xcopy /Y /D /R "$(ProjectDir)cairo-svg.h" "$(SolutionDir)include\cairo"
+xcopy /Y /D /R "$(ProjectDir)cairo-win32.h" "$(SolutionDir)include\cairo"
+xcopy /Y /D /R "$(ProjectDir)cairo-xml.h" "$(SolutionDir)include\cairo"
 </Command>
       <Message>Install Headers</Message>
     </PostBuildEvent>
@@ -159,16 +159,16 @@ xcopy /Y /R "$(ProjectDir)cairo-xml.h" "$(SolutionDir)include\cairo"
     </Link>
     <PostBuildEvent>
       <Command>mkdir "$(SolutionDir)include\cairo"
-xcopy /Y /R "$(ProjectDir)..\cairo-version.h" "$(SolutionDir)include\cairo"
-xcopy /Y /R "$(ProjectDir)cairo.h" "$(SolutionDir)include\cairo"
-xcopy /Y /R "$(ProjectDir)cairo-deprecated.h" "$(SolutionDir)include\cairo"
-xcopy /Y /R "$(ProjectDir)cairo-features.h" "$(SolutionDir)include\cairo"
-xcopy /Y /R "$(ProjectDir)cairo-gl.h" "$(SolutionDir)include\cairo"
-xcopy /Y /R "$(ProjectDir)cairo-pdf.h" "$(SolutionDir)include\cairo"
-xcopy /Y /R "$(ProjectDir)cairo-ps.h" "$(SolutionDir)include\cairo"
-xcopy /Y /R "$(ProjectDir)cairo-svg.h" "$(SolutionDir)include\cairo"
-xcopy /Y /R "$(ProjectDir)cairo-win32.h" "$(SolutionDir)include\cairo"
-xcopy /Y /R "$(ProjectDir)cairo-xml.h" "$(SolutionDir)include\cairo"
+xcopy /Y /D /R "$(ProjectDir)..\cairo-version.h" "$(SolutionDir)include\cairo"
+xcopy /Y /D /R "$(ProjectDir)cairo.h" "$(SolutionDir)include\cairo"
+xcopy /Y /D /R "$(ProjectDir)cairo-deprecated.h" "$(SolutionDir)include\cairo"
+xcopy /Y /D /R "$(ProjectDir)cairo-features.h" "$(SolutionDir)include\cairo"
+xcopy /Y /D /R "$(ProjectDir)cairo-gl.h" "$(SolutionDir)include\cairo"
+xcopy /Y /D /R "$(ProjectDir)cairo-pdf.h" "$(SolutionDir)include\cairo"
+xcopy /Y /D /R "$(ProjectDir)cairo-ps.h" "$(SolutionDir)include\cairo"
+xcopy /Y /D /R "$(ProjectDir)cairo-svg.h" "$(SolutionDir)include\cairo"
+xcopy /Y /D /R "$(ProjectDir)cairo-win32.h" "$(SolutionDir)include\cairo"
+xcopy /Y /D /R "$(ProjectDir)cairo-xml.h" "$(SolutionDir)include\cairo"
 </Command>
       <Message>Install Headers</Message>
     </PostBuildEvent>
@@ -186,16 +186,16 @@ xcopy /Y /R "$(ProjectDir)cairo-xml.h" "$(SolutionDir)include\cairo"
     </Link>
     <PostBuildEvent>
       <Command>mkdir "$(SolutionDir)include\cairo"
-xcopy /Y /R "$(ProjectDir)..\cairo-version.h" "$(SolutionDir)include\cairo"
-xcopy /Y /R "$(ProjectDir)cairo.h" "$(SolutionDir)include\cairo"
-xcopy /Y /R "$(ProjectDir)cairo-deprecated.h" "$(SolutionDir)include\cairo"
-xcopy /Y /R "$(ProjectDir)cairo-features.h" "$(SolutionDir)include\cairo"
-xcopy /Y /R "$(ProjectDir)cairo-gl.h" "$(SolutionDir)include\cairo"
-xcopy /Y /R "$(ProjectDir)cairo-pdf.h" "$(SolutionDir)include\cairo"
-xcopy /Y /R "$(ProjectDir)cairo-ps.h" "$(SolutionDir)include\cairo"
-xcopy /Y /R "$(ProjectDir)cairo-svg.h" "$(SolutionDir)include\cairo"
-xcopy /Y /R "$(ProjectDir)cairo-win32.h" "$(SolutionDir)include\cairo"
-xcopy /Y /R "$(ProjectDir)cairo-xml.h" "$(SolutionDir)include\cairo"
+xcopy /Y /D /R "$(ProjectDir)..\cairo-version.h" "$(SolutionDir)include\cairo"
+xcopy /Y /D /R "$(ProjectDir)cairo.h" "$(SolutionDir)include\cairo"
+xcopy /Y /D /R "$(ProjectDir)cairo-deprecated.h" "$(SolutionDir)include\cairo"
+xcopy /Y /D /R "$(ProjectDir)cairo-features.h" "$(SolutionDir)include\cairo"
+xcopy /Y /D /R "$(ProjectDir)cairo-gl.h" "$(SolutionDir)include\cairo"
+xcopy /Y /D /R "$(ProjectDir)cairo-pdf.h" "$(SolutionDir)include\cairo"
+xcopy /Y /D /R "$(ProjectDir)cairo-ps.h" "$(SolutionDir)include\cairo"
+xcopy /Y /D /R "$(ProjectDir)cairo-svg.h" "$(SolutionDir)include\cairo"
+xcopy /Y /D /R "$(ProjectDir)cairo-win32.h" "$(SolutionDir)include\cairo"
+xcopy /Y /D /R "$(ProjectDir)cairo-xml.h" "$(SolutionDir)include\cairo"
 </Command>
       <Message>Install Headers</Message>
     </PostBuildEvent>
