--- a/src/libjpeg-turbo/simd/simd.vcxproj
+++ b/src/libjpeg-turbo/simd/simd.vcxproj
@@ -143,6 +143,7 @@
     </NASM>
     <NASM Include="jccolor-sse2-64.asm">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
     </NASM>
     <NASM Include="jccolor-sse2.asm">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
