--- a/src/opencflite/objc4/objc.vcxproj
+++ b/src/opencflite/objc4/objc.vcxproj
@@ -133,16 +133,16 @@
     <PreBuildEvent>
       <Message>Install Headers</Message>
       <Command>call version.bat
-xcopy /Y /R "$(ProjectDir)runtime\objc.h" "$(SolutionDir)include\objc\"
-xcopy /Y /R "$(ProjectDir)runtime\objc-api.h" "$(SolutionDir)include\objc\"
-xcopy /Y /R "$(ProjectDir)runtime\objc-auto.h" "$(SolutionDir)include\objc\"
-xcopy /Y /R "$(ProjectDir)runtime\objc-class.h" "$(SolutionDir)include\objc\"
-xcopy /Y /R "$(ProjectDir)runtime\objc-exception.h" "$(SolutionDir)include\objc\"
-xcopy /Y /R "$(ProjectDir)runtime\message.h" "$(SolutionDir)include\objc\"
-xcopy /Y /R "$(ProjectDir)runtime\runtime.h" "$(SolutionDir)include\objc\"
-xcopy /Y /R "$(ProjectDir)runtime\hashtable.h" "$(SolutionDir)include\objc\"
-xcopy /Y /R "$(ProjectDir)runtime\hashtable2.h" "$(SolutionDir)include\objc\"
-xcopy /Y /R "$(ProjectDir)runtime\maptable.h" "$(SolutionDir)include\objc\"
+xcopy /Y /D /R "$(ProjectDir)runtime\objc.h" "$(SolutionDir)include\objc\"
+xcopy /Y /D /R "$(ProjectDir)runtime\objc-api.h" "$(SolutionDir)include\objc\"
+xcopy /Y /D /R "$(ProjectDir)runtime\objc-auto.h" "$(SolutionDir)include\objc\"
+xcopy /Y /D /R "$(ProjectDir)runtime\objc-class.h" "$(SolutionDir)include\objc\"
+xcopy /Y /D /R "$(ProjectDir)runtime\objc-exception.h" "$(SolutionDir)include\objc\"
+xcopy /Y /D /R "$(ProjectDir)runtime\message.h" "$(SolutionDir)include\objc\"
+xcopy /Y /D /R "$(ProjectDir)runtime\runtime.h" "$(SolutionDir)include\objc\"
+xcopy /Y /D /R "$(ProjectDir)runtime\hashtable.h" "$(SolutionDir)include\objc\"
+xcopy /Y /D /R "$(ProjectDir)runtime\hashtable2.h" "$(SolutionDir)include\objc\"
+xcopy /Y /D /R "$(ProjectDir)runtime\maptable.h" "$(SolutionDir)include\objc\"
 </Command>
     </PreBuildEvent>
     <ClCompile>
@@ -169,16 +169,16 @@ xcopy /Y /R "$(ProjectDir)runtime\maptable.h" "$(SolutionDir)include\objc\"
     <PreBuildEvent>
       <Message>Install Headers</Message>
       <Command>call version.bat
-xcopy /Y /R "$(ProjectDir)runtime\objc.h" "$(SolutionDir)include\objc\"
-xcopy /Y /R "$(ProjectDir)runtime\objc-api.h" "$(SolutionDir)include\objc\"
-xcopy /Y /R "$(ProjectDir)runtime\objc-auto.h" "$(SolutionDir)include\objc\"
-xcopy /Y /R "$(ProjectDir)runtime\objc-class.h" "$(SolutionDir)include\objc\"
-xcopy /Y /R "$(ProjectDir)runtime\objc-exception.h" "$(SolutionDir)include\objc\"
-xcopy /Y /R "$(ProjectDir)runtime\message.h" "$(SolutionDir)include\objc\"
-xcopy /Y /R "$(ProjectDir)runtime\runtime.h" "$(SolutionDir)include\objc\"
-xcopy /Y /R "$(ProjectDir)runtime\hashtable.h" "$(SolutionDir)include\objc\"
-xcopy /Y /R "$(ProjectDir)runtime\hashtable2.h" "$(SolutionDir)include\objc\"
-xcopy /Y /R "$(ProjectDir)runtime\maptable.h" "$(SolutionDir)include\objc\"
+xcopy /Y /D /R "$(ProjectDir)runtime\objc.h" "$(SolutionDir)include\objc\"
+xcopy /Y /D /R "$(ProjectDir)runtime\objc-api.h" "$(SolutionDir)include\objc\"
+xcopy /Y /D /R "$(ProjectDir)runtime\objc-auto.h" "$(SolutionDir)include\objc\"
+xcopy /Y /D /R "$(ProjectDir)runtime\objc-class.h" "$(SolutionDir)include\objc\"
+xcopy /Y /D /R "$(ProjectDir)runtime\objc-exception.h" "$(SolutionDir)include\objc\"
+xcopy /Y /D /R "$(ProjectDir)runtime\message.h" "$(SolutionDir)include\objc\"
+xcopy /Y /D /R "$(ProjectDir)runtime\runtime.h" "$(SolutionDir)include\objc\"
+xcopy /Y /D /R "$(ProjectDir)runtime\hashtable.h" "$(SolutionDir)include\objc\"
+xcopy /Y /D /R "$(ProjectDir)runtime\hashtable2.h" "$(SolutionDir)include\objc\"
+xcopy /Y /D /R "$(ProjectDir)runtime\maptable.h" "$(SolutionDir)include\objc\"
 </Command>
     </PreBuildEvent>
     <ClCompile>
@@ -204,16 +204,16 @@ xcopy /Y /R "$(ProjectDir)runtime\maptable.h" "$(SolutionDir)include\objc\"
     <PreBuildEvent>
       <Message>Install Headers</Message>
       <Command>call version.bat
-xcopy /Y /R "$(ProjectDir)runtime\objc.h" "$(SolutionDir)include\objc\"
-xcopy /Y /R "$(ProjectDir)runtime\objc-api.h" "$(SolutionDir)include\objc\"
-xcopy /Y /R "$(ProjectDir)runtime\objc-auto.h" "$(SolutionDir)include\objc\"
-xcopy /Y /R "$(ProjectDir)runtime\objc-class.h" "$(SolutionDir)include\objc\"
-xcopy /Y /R "$(ProjectDir)runtime\objc-exception.h" "$(SolutionDir)include\objc\"
-xcopy /Y /R "$(ProjectDir)runtime\message.h" "$(SolutionDir)include\objc\"
-xcopy /Y /R "$(ProjectDir)runtime\runtime.h" "$(SolutionDir)include\objc\"
-xcopy /Y /R "$(ProjectDir)runtime\hashtable.h" "$(SolutionDir)include\objc\"
-xcopy /Y /R "$(ProjectDir)runtime\hashtable2.h" "$(SolutionDir)include\objc\"
-xcopy /Y /R "$(ProjectDir)runtime\maptable.h" "$(SolutionDir)include\objc\"
+xcopy /Y /D /R "$(ProjectDir)runtime\objc.h" "$(SolutionDir)include\objc\"
+xcopy /Y /D /R "$(ProjectDir)runtime\objc-api.h" "$(SolutionDir)include\objc\"
+xcopy /Y /D /R "$(ProjectDir)runtime\objc-auto.h" "$(SolutionDir)include\objc\"
+xcopy /Y /D /R "$(ProjectDir)runtime\objc-class.h" "$(SolutionDir)include\objc\"
+xcopy /Y /D /R "$(ProjectDir)runtime\objc-exception.h" "$(SolutionDir)include\objc\"
+xcopy /Y /D /R "$(ProjectDir)runtime\message.h" "$(SolutionDir)include\objc\"
+xcopy /Y /D /R "$(ProjectDir)runtime\runtime.h" "$(SolutionDir)include\objc\"
+xcopy /Y /D /R "$(ProjectDir)runtime\hashtable.h" "$(SolutionDir)include\objc\"
+xcopy /Y /D /R "$(ProjectDir)runtime\hashtable2.h" "$(SolutionDir)include\objc\"
+xcopy /Y /D /R "$(ProjectDir)runtime\maptable.h" "$(SolutionDir)include\objc\"
 </Command>
     </PreBuildEvent>
     <ClCompile>
@@ -242,16 +242,16 @@ xcopy /Y /R "$(ProjectDir)runtime\maptable.h" "$(SolutionDir)include\objc\"
     <PreBuildEvent>
       <Message>Install Headers</Message>
       <Command>call version.bat
-xcopy /Y /R "$(ProjectDir)runtime\objc.h" "$(SolutionDir)include\objc\"
-xcopy /Y /R "$(ProjectDir)runtime\objc-api.h" "$(SolutionDir)include\objc\"
-xcopy /Y /R "$(ProjectDir)runtime\objc-auto.h" "$(SolutionDir)include\objc\"
-xcopy /Y /R "$(ProjectDir)runtime\objc-class.h" "$(SolutionDir)include\objc\"
-xcopy /Y /R "$(ProjectDir)runtime\objc-exception.h" "$(SolutionDir)include\objc\"
-xcopy /Y /R "$(ProjectDir)runtime\message.h" "$(SolutionDir)include\objc\"
-xcopy /Y /R "$(ProjectDir)runtime\runtime.h" "$(SolutionDir)include\objc\"
-xcopy /Y /R "$(ProjectDir)runtime\hashtable.h" "$(SolutionDir)include\objc\"
-xcopy /Y /R "$(ProjectDir)runtime\hashtable2.h" "$(SolutionDir)include\objc\"
-xcopy /Y /R "$(ProjectDir)runtime\maptable.h" "$(SolutionDir)include\objc\"
+xcopy /Y /D /R "$(ProjectDir)runtime\objc.h" "$(SolutionDir)include\objc\"
+xcopy /Y /D /R "$(ProjectDir)runtime\objc-api.h" "$(SolutionDir)include\objc\"
+xcopy /Y /D /R "$(ProjectDir)runtime\objc-auto.h" "$(SolutionDir)include\objc\"
+xcopy /Y /D /R "$(ProjectDir)runtime\objc-class.h" "$(SolutionDir)include\objc\"
+xcopy /Y /D /R "$(ProjectDir)runtime\objc-exception.h" "$(SolutionDir)include\objc\"
+xcopy /Y /D /R "$(ProjectDir)runtime\message.h" "$(SolutionDir)include\objc\"
+xcopy /Y /D /R "$(ProjectDir)runtime\runtime.h" "$(SolutionDir)include\objc\"
+xcopy /Y /D /R "$(ProjectDir)runtime\hashtable.h" "$(SolutionDir)include\objc\"
+xcopy /Y /D /R "$(ProjectDir)runtime\hashtable2.h" "$(SolutionDir)include\objc\"
+xcopy /Y /D /R "$(ProjectDir)runtime\maptable.h" "$(SolutionDir)include\objc\"
 </Command>
     </PreBuildEvent>
     <ClCompile>
@@ -279,16 +279,16 @@ xcopy /Y /R "$(ProjectDir)runtime\maptable.h" "$(SolutionDir)include\objc\"
     <PreBuildEvent>
       <Message>Install Headers</Message>
       <Command>call version.bat
-xcopy /Y /R "$(ProjectDir)runtime\objc.h" "$(SolutionDir)include\objc\"
-xcopy /Y /R "$(ProjectDir)runtime\objc-api.h" "$(SolutionDir)include\objc\"
-xcopy /Y /R "$(ProjectDir)runtime\objc-auto.h" "$(SolutionDir)include\objc\"
-xcopy /Y /R "$(ProjectDir)runtime\objc-class.h" "$(SolutionDir)include\objc\"
-xcopy /Y /R "$(ProjectDir)runtime\objc-exception.h" "$(SolutionDir)include\objc\"
-xcopy /Y /R "$(ProjectDir)runtime\message.h" "$(SolutionDir)include\objc\"
-xcopy /Y /R "$(ProjectDir)runtime\runtime.h" "$(SolutionDir)include\objc\"
-xcopy /Y /R "$(ProjectDir)runtime\hashtable.h" "$(SolutionDir)include\objc\"
-xcopy /Y /R "$(ProjectDir)runtime\hashtable2.h" "$(SolutionDir)include\objc\"
-xcopy /Y /R "$(ProjectDir)runtime\maptable.h" "$(SolutionDir)include\objc\"
+xcopy /Y /D /R "$(ProjectDir)runtime\objc.h" "$(SolutionDir)include\objc\"
+xcopy /Y /D /R "$(ProjectDir)runtime\objc-api.h" "$(SolutionDir)include\objc\"
+xcopy /Y /D /R "$(ProjectDir)runtime\objc-auto.h" "$(SolutionDir)include\objc\"
+xcopy /Y /D /R "$(ProjectDir)runtime\objc-class.h" "$(SolutionDir)include\objc\"
+xcopy /Y /D /R "$(ProjectDir)runtime\objc-exception.h" "$(SolutionDir)include\objc\"
+xcopy /Y /D /R "$(ProjectDir)runtime\message.h" "$(SolutionDir)include\objc\"
+xcopy /Y /D /R "$(ProjectDir)runtime\runtime.h" "$(SolutionDir)include\objc\"
+xcopy /Y /D /R "$(ProjectDir)runtime\hashtable.h" "$(SolutionDir)include\objc\"
+xcopy /Y /D /R "$(ProjectDir)runtime\hashtable2.h" "$(SolutionDir)include\objc\"
+xcopy /Y /D /R "$(ProjectDir)runtime\maptable.h" "$(SolutionDir)include\objc\"
 </Command>
     </PreBuildEvent>
     <ClCompile>
@@ -314,16 +314,16 @@ xcopy /Y /R "$(ProjectDir)runtime\maptable.h" "$(SolutionDir)include\objc\"
     <PreBuildEvent>
       <Message>Install Headers</Message>
       <Command>call version.bat
-xcopy /Y /R "$(ProjectDir)runtime\objc.h" "$(SolutionDir)include\objc\"
-xcopy /Y /R "$(ProjectDir)runtime\objc-api.h" "$(SolutionDir)include\objc\"
-xcopy /Y /R "$(ProjectDir)runtime\objc-auto.h" "$(SolutionDir)include\objc\"
-xcopy /Y /R "$(ProjectDir)runtime\objc-class.h" "$(SolutionDir)include\objc\"
-xcopy /Y /R "$(ProjectDir)runtime\objc-exception.h" "$(SolutionDir)include\objc\"
-xcopy /Y /R "$(ProjectDir)runtime\message.h" "$(SolutionDir)include\objc\"
-xcopy /Y /R "$(ProjectDir)runtime\runtime.h" "$(SolutionDir)include\objc\"
-xcopy /Y /R "$(ProjectDir)runtime\hashtable.h" "$(SolutionDir)include\objc\"
-xcopy /Y /R "$(ProjectDir)runtime\hashtable2.h" "$(SolutionDir)include\objc\"
-xcopy /Y /R "$(ProjectDir)runtime\maptable.h" "$(SolutionDir)include\objc\"
+xcopy /Y /D /R "$(ProjectDir)runtime\objc.h" "$(SolutionDir)include\objc\"
+xcopy /Y /D /R "$(ProjectDir)runtime\objc-api.h" "$(SolutionDir)include\objc\"
+xcopy /Y /D /R "$(ProjectDir)runtime\objc-auto.h" "$(SolutionDir)include\objc\"
+xcopy /Y /D /R "$(ProjectDir)runtime\objc-class.h" "$(SolutionDir)include\objc\"
+xcopy /Y /D /R "$(ProjectDir)runtime\objc-exception.h" "$(SolutionDir)include\objc\"
+xcopy /Y /D /R "$(ProjectDir)runtime\message.h" "$(SolutionDir)include\objc\"
+xcopy /Y /D /R "$(ProjectDir)runtime\runtime.h" "$(SolutionDir)include\objc\"
+xcopy /Y /D /R "$(ProjectDir)runtime\hashtable.h" "$(SolutionDir)include\objc\"
+xcopy /Y /D /R "$(ProjectDir)runtime\hashtable2.h" "$(SolutionDir)include\objc\"
+xcopy /Y /D /R "$(ProjectDir)runtime\maptable.h" "$(SolutionDir)include\objc\"
 </Command>
     </PreBuildEvent>
     <ClCompile>
