--- a/src/sqlite/sqlite/sqlite.vcxproj
+++ b/src/sqlite/sqlite/sqlite.vcxproj
@@ -23,6 +23,7 @@
     <ProjectGuid>{0637EB24-7B2D-4B4A-9D95-7C72E7B48D5C}</ProjectGuid>
     <RootNamespace>SQLite</RootNamespace>
     <Keyword>Win32Proj</Keyword>
+    <WindowsTargetPlatformVersion>8.1</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
@@ -77,8 +78,6 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup>
     <_ProjectFileVersion>10.0.40219.1</_ProjectFileVersion>
-    <TargetName Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">$(ProjectName)_debug</TargetName>
-    <TargetName Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">$(ProjectName)_debug</TargetName>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -98,8 +97,8 @@
     </Link>
     <PostBuildEvent>
       <Command>mkdir "$(SolutionDir)include\SQLite"
-xcopy /Y /R "$(ProjectDir)..\sqlite3.h" "$(SolutionDir)include\SQLite"
-xcopy /Y /R "$(ProjectDir)..\sqlite3ext.h" "$(SolutionDir)include\SQLite"</Command>
+xcopy /Y /D /R "$(ProjectDir)..\sqlite3.h" "$(SolutionDir)include\SQLite"
+xcopy /Y /D /R "$(ProjectDir)..\sqlite3ext.h" "$(SolutionDir)include\SQLite"</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -119,8 +118,8 @@ xcopy /Y /R "$(ProjectDir)..\sqlite3ext.h" "$(SolutionDir)include\SQLite"</Comma
     </Link>
     <PostBuildEvent>
       <Command>mkdir "$(SolutionDir)include\SQLite"
-xcopy /Y /R "$(ProjectDir)..\sqlite3.h" "$(SolutionDir)include\SQLite"
-xcopy /Y /R "$(ProjectDir)..\sqlite3ext.h" "$(SolutionDir)include\SQLite"</Command>
+xcopy /Y /D /R "$(ProjectDir)..\sqlite3.h" "$(SolutionDir)include\SQLite"
+xcopy /Y /D /R "$(ProjectDir)..\sqlite3ext.h" "$(SolutionDir)include\SQLite"</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -142,8 +141,8 @@ xcopy /Y /R "$(ProjectDir)..\sqlite3ext.h" "$(SolutionDir)include\SQLite"</Comma
     </ResourceCompile>
     <PostBuildEvent>
       <Command>mkdir "$(SolutionDir)include\SQLite"
-xcopy /Y /R "$(ProjectDir)..\sqlite3.h" "$(SolutionDir)include\SQLite"
-xcopy /Y /R "$(ProjectDir)..\sqlite3ext.h" "$(SolutionDir)include\SQLite"</Command>
+xcopy /Y /D /R "$(ProjectDir)..\sqlite3.h" "$(SolutionDir)include\SQLite"
+xcopy /Y /D /R "$(ProjectDir)..\sqlite3ext.h" "$(SolutionDir)include\SQLite"</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -164,8 +163,8 @@ xcopy /Y /R "$(ProjectDir)..\sqlite3ext.h" "$(SolutionDir)include\SQLite"</Comma
     </ResourceCompile>
     <PostBuildEvent>
       <Command>mkdir "$(SolutionDir)include\SQLite"
-xcopy /Y /R "$(ProjectDir)..\sqlite3.h" "$(SolutionDir)include\SQLite"
-xcopy /Y /R "$(ProjectDir)..\sqlite3ext.h" "$(SolutionDir)include\SQLite"</Command>
+xcopy /Y /D /R "$(ProjectDir)..\sqlite3.h" "$(SolutionDir)include\SQLite"
+xcopy /Y /D /R "$(ProjectDir)..\sqlite3ext.h" "$(SolutionDir)include\SQLite"</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
